fix: timeago/bookmark alignment

--- a/less/topic.less
+++ b/less/topic.less
@@ -140,6 +140,7 @@
 		color: darken(@post-highlight, 20%);
 		opacity: 0;
 		.transition(0.75s ease-in-out opacity);
+		margin-left: 5px;
 	}
 
 	[component="post/anchor"] {
